Remove an ASSERT that is causing flakeyness in Debug builds.

https://webkit.org/b/113020

Reviewed by Jessie Berlin.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::open): Removed ASSERT(m_createdInspectorPage).


Canonical link: https://commits.webkit.org/133204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148682 268f45cc-cd09-0410-ab3c-d52691b4dbfc